[project]
name = "chromeproxy"
version = "0.1.0"
description = "HTTP proxy that routes requests through a headless Chrome browser via Playwright."
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.2",
    "playwright>=1.40",
]

[project.scripts]
chromeproxy = "chromeproxy:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["chromeproxy"]
